--- a/colorstackwinterhack2025.html
+++ b/colorstackwinterhack2025.html
@@ -155,6 +155,13 @@
         Hackathon Agenda
       </a>
 
+            <a
+        href="https://colorstack-family.slack.com/archives/C084ZCYQ50C/p1765833689585929"
+        class="inline-flex items-center justify-center bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition"
+      >
+        Photo Album
+      </a>
+
       <a
         href="https://colorstack-family.slack.com/archives/C084ZCYQ50C/p1766178267558839"
         class="inline-flex items-center justify-center bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg font-semibold transition"
