--- a/2026-305hackjan2026.html
+++ b/2026-305hackjan2026.html
@@ -1095,8 +1095,8 @@
 
 
      // NEW: photo album + prizes
-      photoAlbum: 'http://Hackuniversity-hub.vercel.app',          // update with your real gallery URL
-      prizes: 'http://Hackuniversity-hub.vercel.app',              // or the specific Devpost prizes URL
+      photoAlbum: 'http://Hackuniversity-album.vercel.app',          // update with your real gallery URL
+      prizes: 'http://Hackuniversity-perks.vercel.app',              // or the specific Devpost prizes URL
    
     // Footer + social links
     hackuniversityInstagram: 'https://www.instagram.com/codecrunchclub/',
