--- a/hackuniversity-hackathons-perks.html
+++ b/hackuniversity-hackathons-perks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hack University — Perks</title>
+  <title>Hack University — Perks & Prizes</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -222,7 +222,7 @@
     .nav-link { color:#5f6368; text-decoration:none; font-weight:400; font-size:14px; padding:8px 16px; border-radius:4px; transition:.2s; }
     .nav-link:hover { color:#1a73e8; background:#f1f3f4; }
 
-    /* Info note under title (added) */
+    /* Info note under title */
     .perks-note{
       margin-top: 10px;
       background: #ffffff;
@@ -248,10 +248,6 @@
       cursor:not-allowed;
       box-shadow:none !important;
       transform:none !important;
-    }
-    .btn-verify{
-      background: var(--color-primary) !important;
-      color:#fff !important;
     }
   </style>
 </head>
@@ -282,22 +278,22 @@
       <p class="text-xs sm:text-sm text-gray-500 mb-2">
         <a href="https://hackuniversity.vercel.app" class="underline hover:no-underline">Hack University</a>
         <span aria-hidden="true"> / </span>
-        Perks
+        Perks &amp; Prizes
       </p>
 
       <!-- UPDATED TITLE -->
       <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-        Perks • APIs • Credits • Swag
+        Perks • Prizes • APIs • Credits • Swag
       </h1>
 
-      <!-- UPDATED DESCRIPTION (as requested) -->
+      <!-- UPDATED DESCRIPTION (now includes prizes) -->
       <p class="mt-2 text-gray-600 max-w-3xl">
-        This page lists each event’s perks bundle (APIs, credits, subscriptions, swag, prizes, and more).
-        If a bundle is not ready yet, you’ll see “Perks coming soon.”
-        Reddem of perks require verification via the One-Stop Form using a non-school Gmail (when applicable).
+        This page lists each event’s perks and prizes bundle (APIs, credits, subscriptions, swag, prizes, and more).
+        If a bundle is not ready yet, you’ll see “Perks &amp; Prizes (Soon)”.
+        Redeem of perks may require verification via the One-Stop Form using a non-school Gmail (when applicable).
       </p>
 
-      <!-- Extra small verification note (helpful + same format) -->
+      <!-- Verification note -->
       <div class="perks-note">
         <strong>Verification reminder:</strong> Some sponsor perks require the
         <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" rel="noopener">One-Stop Form</a>
@@ -408,11 +404,11 @@
     <!-- EVENTS -->
     <div class="hackathons-section">
       <!-- UPDATED SECTION TITLE -->
-      <h2>🎁 PERKS BUNDLES — APIs • Credits • Swag</h2>
+      <h2>🎁 PERKS &amp; PRIZES BUNDLES — APIs • Credits • Swag</h2>
 
       <!-- UPDATED SUBTEXT -->
       <p class="mt-2 text-gray-600 max-w-3xl">
-        Each card shows the event details + a button to view the perks bundle. If perks aren’t published yet, the button will say “Perks (Soon)”.
+        Each card shows the event details + a button to view the perks &amp; prizes bundle. If it isn’t published yet, the button will say “Perks &amp; Prizes (Soon)”.
       </p>
       <br>
 
