--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -216,7 +216,7 @@
         <!-- OneStop Form tagline -->
 
         <p class="text-gray-600 max-w-3xl">
-          One place to join our organizations, community platforms, register for upcoming hackathons &amp; Business Venture Arena,
+          One place to join our organizations Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch., community platforms, register for upcoming hackathons &amp; Business Venture Arena,
           and sync important dates to your calendar.
         </p>
 
