--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -239,7 +239,7 @@
       <div class="text-center mt-6">
         <h1 class="title-xl">Empowering Tomorrow’s Innovators</h1>
         <p class="subtitle max-w-3xl mx-auto mt-4 text-lg">
-          A global ecosystem where students, builders, and industry collaborate through hackathons, mentorship, and hands-on projects.
+          A global ecosystem supported by Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch, enabling collaboration between students, builders, and industry through hackathons, mentorship, and hands-on projects.
         </p>
 
         <div class="flex flex-col sm:flex-row items-center justify-center gap-3 mt-7">
@@ -254,79 +254,103 @@
     </div>
   </header>
 
-  <!-- QUICK ACTIONS (Students / Companies / Industry) -->
-  <section class="section" style="padding-top:0;">
-    <div class="container">
-      <div class="grid md:grid-cols-3 gap-5">
-        <!-- Students -->
-        <article class="hu-card p-6 md:p-7">
-          <h3 class="title-md">For Students</h3>
-          <p class="subtitle mt-2">OneStop gives you membership, hackathon registration, volunteering, and E-Board — all in one place.</p>
-          <div class="divider"></div>
-          <div class="grid gap-3">
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-internship.html" target="_blank">
-              <i class="fa-solid fa-briefcase"></i> Internship/Fellowship Program <span class="text-xs opacity-80 font-semibold ml-1">18+</span>
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank">
-              <i class="fa-solid fa-id-card-clip"></i> Join Membership<span class="text-xs opacity-80 font-semibold ml-1">13+</span>
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank">
-              <i class="fa-regular fa-calendar"></i> View Calendar
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">
-              <i class="fa-solid fa-trophy"></i> Hackathons <span class="text-xs opacity-80 font-semibold ml-1">16+</span>
-            </a>
-              <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-hackwinners.html" target="_blank">
-            <i class="fa-solid fa-medal"></i> Hackathon Winners 
-            <span class="text-xs opacity-80 font-semibold ml-1"></span>
+
+
+
+
+
+
+
+
+
+<!-- QUICK ACTIONS (Students / Companies / Industry) -->
+<section class="section" style="padding-top:0;">
+  <div class="container">
+    <div class="grid md:grid-cols-3 gap-5">
+
+      <!-- Students -->
+      <article class="hu-card p-6 md:p-7">
+        <h3 class="title-md">For Students</h3>
+        <p class="subtitle mt-2">
+           Membership (OneStop Form), hackathons (OneStop Form), E-board Applications, programs, Hacker guides, and community access. — all in one place.
+        </p>
+
+        <div class="divider"></div>
+
+        <a class="btn btn-primary w-full"
+           href="https://codecrunchglobal.vercel.app/hackuniversity-main-students.html">
+          <i class="fa-solid fa-graduation-cap"></i> Go to Student Portal
+        </a>
+
+        <div class="mt-3 grid gap-2">
+          <a class="btn btn-ghost w-full"
+             href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank">
+            <i class="fa-regular fa-calendar"></i> View Calendar
           </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank">
-              <i class="fa-solid fa-book"></i> Open Hacker Guide
-            </a>
-            <a class="btn btn-primary" href="https://hackuniversityplatforms.vercel.app/" target="_blank">
-              <i class="fa-brands fa-discord"></i> Join Discord / GroupMe / IG Group
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank">
-              <i class="fa-regular fa-file-pdf"></i> Membership Certificates
-            </a>
-          </div>
-        </article>
+          <a class="btn btn-ghost w-full"
+             href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">
+            <i class="fa-solid fa-trophy"></i> Browse Hackathons
+          </a>
+        </div>
+      </article>
 
-        <!-- Companies -->
-        <article class="hu-card p-6 md:p-7">
-          <h3 class="title-md">For Companies</h3>
-          <p class="subtitle mt-2">Partner with us to mentor talent, host challenges, and support student-led innovation.</p>
-          <div class="divider"></div>
-          <div class="grid gap-3">
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" target="_blank">
-              <i class="fa-solid fa-hand-holding-heart"></i> Sponsor Us
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" target="_blank">
-              <i class="fa-solid fa-microchip"></i> Host an Event
-            </a>
-          </div>
-        </article>
+      <!-- Companies -->
+      <article class="hu-card p-6 md:p-7">
+        <h3 class="title-md">For Companies</h3>
+        <p class="subtitle mt-2">
+          Sponsor, host challenges, and partner with student-led innovation.
+        </p>
 
-        <!-- Industry -->
-        <article class="hu-card p-6 md:p-7">
-          <h3 class="title-md">For Industry Professionals</h3>
-          <p class="subtitle mt-2">Give back as a mentor, judge, or join our Fundraising Advisory Board.</p>
-          <div class="divider"></div>
-          <div class="grid gap-3">
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" target="_blank">
-              <i class="fa-solid fa-donate"></i> Donate
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html" target="_blank">
-              <i class="fa-solid fa-user-tie"></i> Volunteer
-            </a>
-            <a class="btn btn-primary" href="https://codecrunchvolunteerform-no6.vercel.app/" target="_blank">
-              <i class="fa-solid fa-handshake-angle"></i> Fundraising Advisory Board
-            </a>
-          </div>
-        </article>
-      </div>
+        <div class="divider"></div>
+
+        <a class="btn btn-primary w-full"
+           href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html">
+          <i class="fa-solid fa-building"></i> Go to Company Portal
+        </a>
+
+
+      </article>
+
+      <!-- Industry -->
+      <article class="hu-card p-6 md:p-7">
+        <h3 class="title-md">For Industry Professionals</h3>
+        <p class="subtitle mt-2">
+          Mentor, judge, volunteer, or join our Fundraising Advisory Board.
+        </p>
+
+        <div class="divider"></div>
+
+        <a class="btn btn-primary w-full"
+           href="https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html">
+          <i class="fa-solid fa-user-tie"></i> Go to Industry Portal
+        </a>
+
+      </article>
+
     </div>
-  </section>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <!-- PARTNER ORGANIZATIONS -->
   <section id="partners" class="section" style="padding-top:0;">
