--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -210,20 +210,37 @@
         </p>
 
         <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-gray-900">
-          Hack University — OneStop Portal Student Portal
+          Hack University — OneStop Form Student Portal
         </h1>
         <br>
         <!-- OneStop Form tagline -->
 
-        <p class="text-gray-600 max-w-3xl">
-          One place to join our organizations Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch., community platforms, register for upcoming hackathons &amp; Business Venture Arena,
-          and sync important dates to your calendar.
-        </p>
+<p class="text-gray-600 max-w-3xl">
+  A centralized student portal supported by
+  <a href="https://gdg.community.dev/" target="_blank" class="text-blue-600 hover:underline">
+    Google Developer Group at Florida International University (GDG at FIU)
+  </a>,
+  <a href="https://codecrunchglobal.vercel.app/" target="_blank" class="text-blue-600 hover:underline">
+    Code Crunch
+  </a>,
+  <a href="https://colorstack.org/" target="_blank" class="text-blue-600 hover:underline">
+    ColorStack at FIU
+  </a>,
+  <a href="https://www.cahsi.org/" target="_blank" class="text-blue-600 hover:underline">
+    CAHSI at FIU
+  </a>, and
+  <a href="https://www.raspberrypi.org/" target="_blank" class="text-blue-600 hover:underline">
+    Raspberry Pi Code Crunch
+  </a>
+  —one place to join our organizations—where participants collaborate through problem-solving competitions such as hackathons, mentorship-driven challenges, and hands-on projects, access community platforms, register for hackathons, the Business Venture Arena, and the 305 Excel Data Duel, and sync important dates to their calendars.
+</p>
+
+
 
         <!-- Helper text for this page -->
         <p class="mt-3 text-gray-600 max-w-2xl">
           Use the same Gmail/Google account you used on the OneStop Form to verify your membership,
-          register or update hackathon / Business Venture Arena registration, unlock Discord &amp; GroupMe,
+          register or update any event participation, unlock Discord &amp; GroupMe,
           and download your official membership certificate.
         </p>
 
@@ -357,7 +374,7 @@
               <p class="font-semibold text-gray-800 mb-1">With this portal you can:</p>
               <ul class="list-disc list-inside space-y-1">
                 <li>Confirm your membership across Google Developer Group at FIU, Code Crunch Worldwide, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch.</li>
-                <li>Register or update your Hackathon &amp; Business Venture Arena participation details.</li>
+                <li>Register for or update your participation in hackathons, the Business Venture Arena, the 305 Excel Data Duel, and other event competitions.</li>
                 <li>Download official membership certificates (PDF).</li>
                 <li>Access Discord &amp; GroupMe for Hack University hackathons and organization-specific events.</li>
                 <li>Show verified memberships &amp; leadership roles on your resume or LinkedIn.</li>
@@ -519,7 +536,7 @@
     <div class="mt-12 mb-10 bg-gray-50 border border-gray-200 rounded-xl p-6 lg:p-8">
       <div class="grid md:grid-cols-2 gap-6 items-center">
         <!-- SAMPLE CERTIFICATE IMAGE -->
-        <div class="w-full">
+        <!-- <div class="w-full">
           <div class="border border-dashed border-gray-300 rounded-lg overflow-hidden bg-white">
             <img
               src="https://via.placeholder.com/900x600?text=Sample+Hack+University+Membership+Certificate"
@@ -529,7 +546,7 @@
           </div>
           <p class="mt-2 text-xs text-gray-500 text-center">
             Preview of what your downloadable membership certificate will look like.
-          </p>
+          </p> -->
         </div>
 
         <!-- SAMPLE TEXT FOR LINKEDIN / LEADERSHIP DESCRIPTION -->
