--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -76,6 +76,58 @@
     }
     .nav-link:hover { color: var(--color-primary); background: #f1f3f4; }
 
+
+    /* =========================
+   Navbar (mobile toggle)
+   ========================= */
+.nav-toggle {
+  display: none; /* show only on mobile */
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  border-radius: var(--radius-sm);
+  border: 1px solid var(--color-border);
+  background: var(--color-bg-white);
+  color: var(--color-text);
+  box-shadow: var(--shadow-sm);
+  transition: all var(--transition-base);
+}
+
+.nav-toggle:hover {
+  background: #f1f3f4;
+  border-color: #d2e3fc;
+  color: var(--color-primary);
+}
+
+@media (max-width: 768px) {
+  .nav-toggle { display: inline-flex; }
+
+  .nav-links {
+    display: none;              /* hidden by default */
+    width: 100%;
+    flex-direction: column;
+    gap: 8px;
+    padding-top: 12px;
+  }
+
+  .nav-links.is-open {
+    display: flex;              /* shown when toggled */
+  }
+
+  .nav-container {
+    flex-wrap: wrap;            /* allows links to drop below */
+    gap: 10px;
+  }
+
+  .nav-link {
+    width: 100%;
+    padding: 10px 12px;
+  }
+}
+
+
+
     /* =========================
        Generic Container
        ========================= */
@@ -218,18 +270,34 @@
 
 <body>
 
-  <!-- NAV -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-brand"><a href="#">Hack University Initiative</a></div>
-      <div class="nav-links">
-        <a class="nav-link" href="#partners">Partners</a>
-        <a class="nav-link" href="#mission">Mission</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">Hackathons</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank">Calendar</a>
+    <!-- NAV -->
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="nav-brand">
+          <a href="#">Hack University Initiative</a>
+        </div>
+
+        <!-- Mobile toggle -->
+        <button
+          class="nav-toggle"
+          type="button"
+          aria-label="Toggle navigation"
+          aria-controls="huNavLinks"
+          aria-expanded="false"
+        >
+          <i class="fa-solid fa-bars"></i>
+        </button>
+
+        <!-- Links -->
+        <div class="nav-links" id="huNavLinks">
+          <a class="nav-link" href="#partners">Partners</a>
+          <a class="nav-link" href="#mission">Mission</a>
+          <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
+          <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+
 
   <!-- HERO -->
   <header class="section" style="padding-top:48px;">
@@ -677,6 +745,47 @@
       </div>
     </div>
   </footer>
+
+<script>
+  (function () {
+    const toggleBtn = document.querySelector(".nav-toggle");
+    const navLinks = document.getElementById("huNavLinks");
+
+    if (!toggleBtn || !navLinks) return;
+
+    const setExpanded = (expanded) => {
+      toggleBtn.setAttribute("aria-expanded", String(expanded));
+      navLinks.classList.toggle("is-open", expanded);
+      const icon = toggleBtn.querySelector("i");
+      if (icon) icon.className = expanded ? "fa-solid fa-xmark" : "fa-solid fa-bars";
+    };
+
+    // Toggle menu
+    toggleBtn.addEventListener("click", () => {
+      const expanded = toggleBtn.getAttribute("aria-expanded") === "true";
+      setExpanded(!expanded);
+    });
+
+    // Close menu after clicking a same-page anchor link (e.g., #mission)
+    navLinks.addEventListener("click", (e) => {
+      const a = e.target.closest("a");
+      if (!a) return;
+      const href = a.getAttribute("href") || "";
+      if (href.startsWith("#")) setExpanded(false);
+    });
+
+    // Close menu when resizing to desktop
+    window.addEventListener("resize", () => {
+      if (window.innerWidth > 768) setExpanded(false);
+    });
+
+    // Ensure initial state
+    setExpanded(false);
+  })();
+</script>
+
+
+
 
 </body>
 </html>
