--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -306,9 +306,26 @@
 
       <div class="text-center mt-6">
         <h1 class="title-xl">Empowering Tomorrow’s Innovators</h1>
-        <p class="subtitle max-w-3xl mx-auto mt-4 text-lg">
-          A global ecosystem supported by Google Developer Group at Florida International University (GDG at FIU), Code Crunch, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch, enabling collaboration between students, builders, and industry through hackathons, mentorship, and hands-on projects.
-        </p>
+          <p class="subtitle max-w-3xl mx-auto mt-4 text-lg">
+            A global ecosystem supported by
+            <a href="https://gdgatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
+              Google Developer Group at Florida International University (GDG at FIU)
+            </a>,
+            <a href="https://codecrunchglobal.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
+              Code Crunch
+            </a>,
+            <a href="https://colorstackatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
+              ColorStack at FIU
+            </a>,
+            <a href="https://cahsiatfiu.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
+              CAHSI at FIU
+            </a>, and
+            <a href="https://raspberrypicodecrunch.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">
+              Raspberry Pi Code Crunch
+            </a>,
+            enabling collaboration between students, builders, and industry through hackathons, mentorship, and hands-on projects.
+          </p>
+
 
         <div class="flex flex-col sm:flex-row items-center justify-center gap-3 mt-7">
           <!-- <a class="btn btn-primary" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" rel="noopener">
