--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -8,13 +8,44 @@
   <!-- Tailwind via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet"/>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+
 
   <style>
-    body {
+    /* body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background:#f9fafb;
-    }
+
+
+      --color-primary: #1a73e8;
+      --color-primary-hover: #1557b0;
+      --color-text: #202124;
+      --color-text-muted: #5f6368;
+      --color-border: #dadce0;
+      --color-bg: #f8f9fa;
+      --color-bg-white: #fff;
+      --color-success: #137333;
+      --color-success-bg: #e6f4ea;
+      --color-warning: #b45309;
+      --color-warning-bg: #fff4e5;
+      --color-danger: #d33b01;
+    } */
+
+
+      /* Put tokens in :root (not body) */
+  :root{
+    --color-primary: #1a73e8;
+    --color-primary-hover: #1557b0;
+    --color-text: #202124;
+    --color-text-muted: #5f6368;
+    --color-border: #dadce0;
+    --color-bg: #f8f9fa;
+    --color-bg-white: #fff;
+
+    --radius-sm: 10px;
+    --shadow-sm: 0 1px 2px rgba(0,0,0,.06);
+    --transition-base: .18s ease;
+  }
 
     .cc-blue { background:#2563eb; }
     .cc-blue-text { color:#1e40af; }
@@ -42,83 +73,156 @@
       border-color: #fca5a5;
     }
 
-    /* Navigation Styles */
+     /* =========================
+       Navbar (clean & sticky)
+       ========================= */
     .navbar {
-      background: #fff;
-      border-bottom: 1px solid #e8eaed;
+      background: var(--color-bg-white);
+      border-bottom: 1px solid var(--color-border);
       padding: 12px 0;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      position: sticky; top: 0; z-index: 1000;
+      box-shadow: var(--shadow-sm);
     }
-
     .nav-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      max-width: 1200px; margin: 0 auto;
+      display: flex; justify-content: space-between; align-items: center;
       padding: 0 20px;
     }
-
-    .nav-brand {
-      font-size: 22px;
-      font-weight: 500;
-      color: #4285f4;
-    }
-
-    .nav-brand a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    .nav-links {
-      display: flex;
-      gap: 30px;
-    }
-
+    .nav-brand { font-size: 22px; font-weight: 700; color: var(--color-primary); letter-spacing:.2px; }
+    .nav-links { display: flex; gap: 18px; flex-wrap: wrap; }
     .nav-link {
-      color: #5f6368;
-      text-decoration: none;
-      font-weight: 400;
-      font-size: 14px;
-      padding: 8px 16px;
-      border-radius: 4px;
-      transition: .2s;
+      color: var(--color-text-muted); font-weight: 500; font-size: 14px;
+      padding: 8px 12px; border-radius: var(--radius-sm);
+      transition: all var(--transition-base);
+    }
+    .nav-link:hover { color: var(--color-primary); background: #f1f3f4; }
+
+
+
+    
+  /* =========================
+     Navbar (clean & sticky)
+     ========================= */
+  .navbar{
+    background: var(--color-bg-white);
+    border-bottom: 1px solid var(--color-border);
+    padding: 12px 0;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: var(--shadow-sm);
+  }
+
+  .nav-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    gap: 12px;
+  }
+
+  .nav-brand a{
+    font-size: 20px;
+    font-weight: 800;
+    color: var(--color-primary);
+    letter-spacing: .2px;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: var(--radius-sm);
+    padding: 6px 8px;
+    transition: background var(--transition-base), color var(--transition-base);
+  }
+
+  .nav-brand a:hover{
+    background: #f1f3f4;
+    color: var(--color-primary-hover);
+  }
+
+  .nav-links{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .nav-link{
+    color: var(--color-text-muted);
+    font-weight: 600;
+    font-size: 14px;
+    padding: 8px 12px;
+    border-radius: var(--radius-sm);
+    transition: background var(--transition-base), color var(--transition-base), transform var(--transition-base);
+    text-decoration: none;
+    line-height: 1;
+  }
+
+  .nav-link:hover{
+    color: var(--color-primary);
+    background: #f1f3f4;
+    transform: translateY(-1px);
+  }
+
+  /* Focus ring for keyboard accessibility */
+  .nav-link:focus-visible,
+  .nav-toggle:focus-visible,
+  .nav-brand a:focus-visible{
+    outline: 3px solid rgba(26,115,232,.25);
+    outline-offset: 2px;
+  }
+
+  /* =========================
+     Navbar (mobile toggle)
+     ========================= */
+  .nav-toggle{
+    display: none; /* shown only on mobile */
+    align-items: center;
+    justify-content: center;
+    width: 42px;
+    height: 42px;
+    border-radius: var(--radius-sm);
+    border: 1px solid var(--color-border);
+    background: var(--color-bg-white);
+    color: var(--color-text);
+    box-shadow: var(--shadow-sm);
+    transition: background var(--transition-base), color var(--transition-base), border-color var(--transition-base);
+    cursor: pointer;
+  }
+
+  .nav-toggle:hover{
+    background: #f1f3f4;
+    border-color: #d2e3fc;
+    color: var(--color-primary);
+  }
+
+  @media (max-width: 768px){
+    .nav-toggle{ display: inline-flex; }
+
+    .nav-container{
+      flex-wrap: wrap; /* links drop below brand */
     }
 
-    .nav-link:hover {
-      color: #1a73e8;
-      background: #f1f3f4;
+    .nav-links{
+      display: none;  /* hidden by default */
+      width: 100%;
+      flex-direction: column;
+      align-items: stretch;
+      gap: 6px;
+      padding: 10px 0 2px 0;
     }
 
-    /* Mobile Responsive Nav */
-    @media (max-width: 768px) {
-      .nav-container {
-        flex-direction: column;
-        gap: 12px;
-      }
-
-      .nav-links {
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 8px;
-      }
-
-      .nav-link {
-        font-size: 11px;
-        padding: 6px 10px;
-        white-space: nowrap;
-      }
+    .nav-links.is-open{
+      display: flex; /* shown when toggled */
     }
 
-    @media (max-width: 480px) {
-      .nav-link {
-        font-size: 10px;
-        padding: 5px 8px;
-      }
+    .nav-link{
+      width: 100%;
+      padding: 12px 12px;
     }
-
+  }
     /* Quick Links (community platforms row) */
     .quick-links {
       display: flex;
@@ -177,8 +281,8 @@
 </head>
 <body>
 
-<!-- ======================= NAVBAR ======================= -->
-<nav class="navbar">
+<!-- ======================= old simple all org NAVBAR ======================= -->
+<!-- <nav class="navbar">
   <div class="nav-container">
     <div class="nav-brand">
       <a href="http://hackuniversity.vercel.app/" target="_blank" rel="noopener">
@@ -194,7 +298,40 @@
       <a href="https://codecrunchglobal.vercel.app/hackuniversitydonate.html" class="nav-link">Support Us</a>
     </div>
   </div>
+</nav> -->
+
+
+<nav class="navbar" id="huNavbar">
+  <div class="nav-container">
+    <div class="nav-brand">
+      <!-- Change href as you want (kept # like your version) -->
+      <a href="#" aria-label="Hack University Initiative Home">
+        Hack University Initiative
+      </a>
+    </div>
+
+    <!-- Mobile toggle -->
+    <button
+      class="nav-toggle"
+      type="button"
+      aria-label="Toggle navigation"
+      aria-controls="huNavLinks"
+      aria-expanded="false"
+    >
+      <i class="fa-solid fa-bars" aria-hidden="true"></i>
+    </button>
+
+    <!-- Links -->
+    <div class="nav-links" id="huNavLinks">
+      <a class="nav-link" href="#partners">Partners</a>
+      <a class="nav-link" href="#mission">Mission</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+    </div>
+  </div>
 </nav>
+
+
 
 <!-- ======================= MAIN MEMBER / HACKATHON ACCESS SECTION ======================= -->
 <section id="membership-certificate" class="py-10 bg-white">
@@ -217,7 +354,7 @@
 
 <p class="text-gray-600 max-w-3xl">
   A centralized student portal supported by
-  <a href="https://gdg.community.dev/" target="_blank" class="text-blue-600 hover:underline">
+  <a href="https://gdgatfiu.vercel.app" target="_blank" class="text-blue-600 hover:underline">
     Google Developer Group at Florida International University (GDG at FIU)
   </a>,
   <a href="https://codecrunchglobal.vercel.app/" target="_blank" class="text-blue-600 hover:underline">
@@ -265,13 +402,19 @@
             <a class="ql-btn ql-googlecal" href="https://calendar.google.com/calendar/u/0?cid=ODRjNGQ2NTA0NTA1OTdjNTkyZTc0ZThmNWZlODUxMzAxZjYwYTkyZjMwYmI1OTM2ODA5OTk3ODFkZmFjYWIxMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t" target="_blank" rel="noopener" aria-label="Add Hack University calendar to your Google Calendar">
               <i class="fab fa-google"></i><span>Add to Google Calendar</span>
             </a>
+
+
             <!-- Locked Discord button (conceptually unlocked after login) -->
+
             <button type="button" class="ql-btn ql-disabled" disabled aria-disabled="true">
               <i class="fa-brands fa-discord"></i>
               <span>Organizations Discords (unlock after login)</span>
               <i class="fa-solid fa-lock text-xs"></i>
             </button>
           </nav>
+
+
+          
         </div>
       </div>
     </header>
@@ -1272,6 +1415,64 @@ document.addEventListener("DOMContentLoaded", () => {
     downloadBtn.addEventListener("click", downloadCertificate);
   }
 });
+
+
+
+//nav bard version 1.5.2025 
+  // ✅ Navbar JS (revised)
+  (function () {
+    const navbar = document.getElementById("huNavbar");
+    const toggleBtn = navbar?.querySelector(".nav-toggle");
+    const navLinks = document.getElementById("huNavLinks");
+
+    if (!toggleBtn || !navLinks) return;
+
+    const setExpanded = (expanded) => {
+      toggleBtn.setAttribute("aria-expanded", String(expanded));
+      navLinks.classList.toggle("is-open", expanded);
+
+      const icon = toggleBtn.querySelector("i");
+      if (icon) icon.className = expanded ? "fa-solid fa-xmark" : "fa-solid fa-bars";
+    };
+
+    // Toggle menu
+    toggleBtn.addEventListener("click", () => {
+      const expanded = toggleBtn.getAttribute("aria-expanded") === "true";
+      setExpanded(!expanded);
+    });
+
+    // Close menu after clicking a same-page anchor link (e.g., #mission)
+    navLinks.addEventListener("click", (e) => {
+      const a = e.target.closest("a");
+      if (!a) return;
+      const href = a.getAttribute("href") || "";
+      if (href.startsWith("#")) setExpanded(false);
+    });
+
+    // Close menu when resizing to desktop
+    window.addEventListener("resize", () => {
+      if (window.innerWidth > 768) setExpanded(false);
+    });
+
+    // Close menu on Escape
+    window.addEventListener("keydown", (e) => {
+      if (e.key === "Escape") setExpanded(false);
+    });
+
+    // Close menu when clicking outside (mobile)
+    document.addEventListener("click", (e) => {
+      const isOpen = navLinks.classList.contains("is-open");
+      if (!isOpen) return;
+      const clickedInside = navbar.contains(e.target);
+      if (!clickedInside) setExpanded(false);
+    });
+
+    // Ensure initial state
+    setExpanded(false);
+  })();
+//end nav bar version 1.5.2025
+
+
 </script>
 
 </body>
