--- a/hackuniversity-main-students.html
+++ b/hackuniversity-main-students.html
@@ -52,29 +52,77 @@
     }
     a { color: inherit; text-decoration: none; }
 
-    /* =========================
-       Navbar (clean & sticky)
-       ========================= */
-    .navbar {
-      background: var(--color-bg-white);
-      border-bottom: 1px solid var(--color-border);
-      padding: 12px 0;
-      position: sticky; top: 0; z-index: 1000;
-      box-shadow: var(--shadow-sm);
-    }
-    .nav-container {
-      max-width: 1200px; margin: 0 auto;
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 0 20px;
-    }
-    .nav-brand { font-size: 22px; font-weight: 700; color: var(--color-primary); letter-spacing:.2px; }
-    .nav-links { display: flex; gap: 18px; flex-wrap: wrap; }
-    .nav-link {
-      color: var(--color-text-muted); font-weight: 500; font-size: 14px;
-      padding: 8px 12px; border-radius: var(--radius-sm);
-      transition: all var(--transition-base);
-    }
-    .nav-link:hover { color: var(--color-primary); background: #f1f3f4; }
+    
+    
+/* =========================
+   Navbar (clean & sticky)
+   ========================= */
+.navbar {
+  background: var(--color-bg-white);
+  border-bottom: 1px solid var(--color-border);
+  padding: 12px 0;
+  position: sticky; top: 0; z-index: 1000;
+  box-shadow: var(--shadow-sm);
+}
+.nav-container {
+  max-width: 1200px; margin: 0 auto;
+  display: flex; justify-content: space-between; align-items: center;
+  padding: 0 20px;
+}
+.nav-brand { font-size: 22px; font-weight: 700; color: var(--color-primary); letter-spacing:.2px; }
+.nav-links { display: flex; gap: 18px; flex-wrap: wrap; }
+.nav-link {
+  color: var(--color-text-muted); font-weight: 500; font-size: 14px;
+  padding: 8px 12px; border-radius: var(--radius-sm);
+  transition: all var(--transition-base);
+}
+.nav-link:hover { color: var(--color-primary); background: #f1f3f4; }
+
+/* =========================
+   Navbar (mobile toggle)
+   ========================= */
+.nav-toggle {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  border-radius: var(--radius-sm);
+  border: 1px solid var(--color-border);
+  background: var(--color-bg-white);
+  color: var(--color-text);
+  box-shadow: var(--shadow-sm);
+  transition: all var(--transition-base);
+}
+.nav-toggle:hover {
+  background: #f1f3f4;
+  border-color: #d2e3fc;
+  color: var(--color-primary);
+}
+
+@media (max-width: 768px) {
+  .nav-toggle { display: inline-flex; }
+
+  .nav-links {
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 8px;
+    padding-top: 12px;
+  }
+
+  .nav-links.is-open { display: flex; }
+
+  .nav-container {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .nav-link {
+    width: 100%;
+    padding: 10px 12px;
+  }
+}
 
     /* =========================
        Generic Container
@@ -340,17 +388,36 @@
 <body>
 
   <!-- NAV -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="nav-brand"><a href="#">Hack University Initiative</a></div>
-      <div class="nav-links">
-        <a class="nav-link" href="#partners">Partners</a>
-        <a class="nav-link" href="#mission">Mission</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank">Hackathons</a>
-        <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank">Calendar</a>
-      </div>
+<nav class="navbar" id="huNavbar">
+  <div class="nav-container">
+    <div class="nav-brand">
+      <!-- Change href as you want (kept # like your version) -->
+      <a href="https://hackuniversity.vercel.app/" aria-label="Hack University Initiative Home">
+        Hack University Initiative
+      </a>
     </div>
-  </nav>
+
+    <!-- Mobile toggle -->
+    <button
+      class="nav-toggle"
+      type="button"
+      aria-label="Toggle navigation"
+      aria-controls="huNavLinks"
+      aria-expanded="false"
+    >
+      <i class="fa-solid fa-bars" aria-hidden="true"></i>
+    </button>
+
+    <!-- Links -->
+    <div class="nav-links" id="huNavLinks">
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-main-students.html#partners">Partners</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-main-students.html#mission">Mission</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
+    </div>
+  </div>
+</nav>
+
 
   <!-- HERO -->
   <header class="section" style="padding-top:48px;">
@@ -928,5 +995,53 @@
     </div>
   </footer>
 
+
+  <script >
+
+    //nav bard version 1.5.2025 
+  // ✅ Navbar JS (revised)
+ (function () {
+    const toggleBtn = document.querySelector(".nav-toggle");
+    const navLinks = document.getElementById("huNavLinks");
+
+    if (!toggleBtn || !navLinks) return;
+
+    const setExpanded = (expanded) => {
+      toggleBtn.setAttribute("aria-expanded", String(expanded));
+      navLinks.classList.toggle("is-open", expanded);
+      const icon = toggleBtn.querySelector("i");
+      if (icon) icon.className = expanded ? "fa-solid fa-xmark" : "fa-solid fa-bars";
+    };
+
+    // Toggle menu
+    toggleBtn.addEventListener("click", () => {
+      const expanded = toggleBtn.getAttribute("aria-expanded") === "true";
+      setExpanded(!expanded);
+    });
+
+    // Close menu after clicking a same-page anchor link
+    navLinks.addEventListener("click", (e) => {
+      const a = e.target.closest("a");
+      if (!a) return;
+      const href = a.getAttribute("href") || "";
+      if (href.startsWith("#")) setExpanded(false);
+    });
+
+    // Close menu when resizing to desktop
+    window.addEventListener("resize", () => {
+      if (window.innerWidth > 768) setExpanded(false);
+    });
+
+    // Ensure initial state
+    setExpanded(false);
+  })();
+//end nav bar version 1.5.2025
+
+
+
+  </script>
+
+
+  
 </body>
 </html>
